tests/fail/union_forbidden_types.tk

// EXPECT: error[E0426]:
shape BadBool(as b: bool | as val: u64)
// EXPECT: error[E0427]:
shape BadUnique(as p: ^i32 | as val: u64)
// EXPECT: error[E0427]:
shape BadShared(as p: ~i32 | as val: u64)

fn main() -> i32 { return 0; }
